# Spectr

./: .gitignore  CMakeLists.txt  Cargo.toml  demo.spectr  main.cpp  test.spectr
src/: Algebra.hpp  AudioTypes.cpp  AudioTypes.h  Expr.cpp  Expr.h  Lexer.cpp  Lexer.h  LogSettings.h  Parser.cpp  Parser.h  PlaybackEvents.cpp  PlaybackEvents.h  Session.cpp  Session.h  Synthesizer.cpp  Synthesizer.h  base.cpp  base.hpp  compiler.cpp  compiler.hpp  error.rs  expr.rs  expression.cpp  expression.hpp  kind.rs  lexer.cpp  lexer.hpp  lexer.rs  main.cpp  main.rs  name_resolution.cpp  name_resolution.hpp  parser.cpp  parser.hpp  parser.rs  statement.cpp  statement.hpp  stmt.rs  type.cpp  type.hpp  (+5 more)
src/interpreters/: Interpreter.cpp  Interpreter.hpp  Types.cpp  Types.h  Values.h
src/parser/: expr.rs  expr_parsing.rs  stmt.rs  stmt_parsing.rs
std/: test.spectr
std/private/: session_init.spectr
